Setup akka cluster

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,34 @@
 akka {
     loglevel = DEBUG
+    actor {
+        provider = "cluster"
+    }
+    remote.artery {
+        canonical {
+            hostname = "127.0.0.1"
+            port = 2551
+        }
+    }
+    cluster {
+        seed-nodes = [
+            "akka://AllodsLegacy@127.0.0.1:2551"
+        ]
+        downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+        roles = [
+            "AccountServer",
+            "shard"
+        ]
+        singleton {
+            singleton-name = "AccountServer"
+            role = "AccountServer"
+        }
+    }
 }
 account-server {
+    api {
+        host = "127.0.0.1"
+        port = 8080
+    }
     auth-listener {
       host = "127.0.0.1"
       port = 9340
@@ -10,5 +37,11 @@ account-server {
     database {
         factory = "eu.allodslegacy.account.db.dao.mongodb.MongodbDAOFactory"
         connection-string = "mongodb://localhost:27017"
+    }
+}
+shard {
+    frontend {
+        host = "127.0.0.1"
+        port = 15000
     }
 }
